# gitlog-report

./: Init.md  LICENSE  M1_REVIEW_FIXES.md  M2_REVIEW_FIXES.md  README.md  README.zh-CN.md  TAURI_PERMISSIONS.md  config.cli.json  fix.md  package-lock.json  package.json  review_m2.md  vite.config.ts
.github/workflows/: release.yml  weekly-report.yml
scripts/: generate-weekly-report.sh  push-dingtalk.ts  push-feishu.ts
src/: App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  git.rs  llm.rs  mod.rs  report.rs  template.rs
src-tauri/src/models/: commit.rs  config.rs  mod.rs  report.rs  template.rs
src-tauri/src/services/: cache_service.rs  encryption_service.rs  export_service.rs  git_service.rs  llm_service.rs  mod.rs  report_service.rs  storage_service.rs  template_service.rs
src-tauri/src/templates/: monthly.hbs  weekly.hbs
src-tauri/src/utils/: mod.rs
src/components/: EmptyState.tsx  ErrorBanner.tsx  LanguageToggle.tsx  ThemeToggle.tsx  UpdateDialog.tsx
src/components/CommitList/: CommitList.tsx
src/components/FilterToolbar/: FilterToolbar.tsx  index.ts
src/components/RepoSelector/: RepoSelector.tsx
src/components/ReportViewer/: ReportViewer.tsx
src/hooks/: useGitRepo.ts  useLLMConfig.ts  useReportGen.ts  useUpdater.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/layouts/: Layout.tsx
src/store/: configStore.ts  index.ts  repoStore.ts  reportStore.ts
src/types/: index.ts
(+19 files in other folders)
