[package]
name = "gitlog-ai-reporter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitlog_ai_reporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core dependencies
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"

# Git dependencies
git2 = { version = "0.18", features = ["vendored-libgit2"] }

# HTTP client for LLM API calls (M3)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Template engine for report generation (M3)
handlebars = "5.1"

# Configuration persistence (M3)
tauri-plugin-store = "2.0.0"

# Async utilities (M3)
futures = "0.3"
tokio-stream = "0.1"

# Error handling (M3)
anyhow = "1.0"

# Markdown to HTML conversion (M4)
pulldown-cmark = "0.9"

# Keyring for secure storage (M5 - deferred)
# keyring = "2.0"

